--- a/Client/package.json
+++ b/Client/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
